Self hosted fonts + fix illustration on safari - remove deprecated google fonts plugin

--- a/src/styles/custom-base-styles.css
+++ b/src/styles/custom-base-styles.css
@@ -1,3 +1,53 @@
+@font-face {
+  font-family: "Merriweather";
+  font-style: normal;
+  font-weight: 700;
+  font-display: fallback;
+  src: url("/fonts/merriweather-v21-latin-700.woff2") format("woff2"),
+    url("/fonts/merriweather-v21-latin-700.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-display: fallback;
+  src: url("/fonts/montserrat-v14-latin-regular.woff2") format("woff2"),
+    url("/fonts/montserrat-v14-latin-regular.woff") format("woff");
+}
+@font-face {
+  font-family: "Montserrat";
+  font-style: italic;
+  font-weight: 400;
+  font-display: fallback;
+  src: url("/fonts/montserrat-v14-latin-italic.woff2") format("woff2"),
+    url("/fonts/montserrat-v14-latin-italic.woff") format("woff");
+}
+@font-face {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 500;
+  font-display: fallback;
+  src: url("/fonts/montserrat-v14-latin-500.woff2") format("woff2"),
+    url("/fonts/montserrat-v14-latin-500.woff") format("woff");
+}
+@font-face {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-display: fallback;
+  src: url("/fonts/montserrat-v14-latin-600.woff2") format("woff2"),
+    url("/fonts/montserrat-v14-latin-600.woff") format("woff");
+}
+@font-face {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-display: fallback;
+  src: url("/fonts/montserrat-v14-latin-700.woff2") format("woff2"),
+    url("/fonts/montserrat-v14-latin-700.woff") format("woff");
+}
+
 html {
   @apply h-full antialiased bg-light text-gray-800;
 }
